src/tui/snapshots/control_acceso__tui__visual_tests__Respaldos_99x30_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                   
 BRISAS CLI                                                              Operador de prueba · ROOT 
 CONTROL DE ACCESO                                RESPALDOS                                  ··:·· 
 ───────────────────────────────────────────────────────────────────────────────────────────────── 
 FECHA               TIPO              TAMAÑO     ESQUEMA   ESTADO                                 
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                       No hay respaldos todavía. Presione C para crear uno.                        
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
 ───────────────────────────────────────────────────────────────────────────────────────────────── 
 No hay un respaldo seleccionado.                                                                  
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
 0 respaldo(s)                                                                                     
 ↑↓ Mover  C Crear  V Revalidar  E Exportar  R Restaurar  L Actualizar  ESC Volver                 
 F2 Salida rápida  F7 Tema                                                                         
                                                                                                   

=== estilos ===
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                                              " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CONTROL DE ACCESO" fg=Rgb(145, 158, 164) bg=Black mod=NONE
"                    " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"            RESPALDOS            " fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"─────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"FECHA               TIPO              TAMAÑO     ESQUEMA   ESTADO                                " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                      No hay respaldos todavía. Presione C para crear uno.                       " fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"─────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"No hay un respaldo seleccionado.                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                 " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"0 respaldo(s)                                                                                    " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Mover  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"C" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Crear  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"V" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Revalidar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"E" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Exportar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"R" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Restaurar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"L" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Actualizar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver                 " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema                                                                         " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(220, 225, 228) bg=Black mod=NONE
